syntax = "proto3";
package bierzee;

import 'entities/user.proto';
import 'entities/organization.proto';
import 'entities/auth.proto';

message PostLoginRequest {
  string userLoginId = 1;
  string organizationCode = 2;
  string organizationPassword = 3;
}

message PostLoginResponse {
  User user = 1;
  Organization organization = 2;
  Session session = 3;
  bool isAdmin = 4;
}

message GetSessionResponse {
  User user = 1;
  Organization organization = 2;
  Session session = 3;
  bool isAdmin = 4;
}
